# pluma-plugins

./: .gitignore  Makefile  Makefile.in  configure.ac
iast/: iast.plugin  plugin.c  plugin.h
length/: length.plugin  plugin.c  plugin.h
lipsum/: lipsum.plugin  lipsum.txt  plugin.c  plugin.h
trailvisual/: plugin.c  plugin.h  trailvisual.plugin
